# adios

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
libs/adios-common/: Cargo.toml
libs/adios-common/src/: lib.rs
libs/adios-from-cmsis-dap-ws-pdml/: Cargo.toml
libs/adios-from-cmsis-dap-ws-pdml/src/: cmsis_dap.rs  lib.rs
libs/adios-from-cmsis-dap-ws-pdml/src/cmsis_dap/: from_pdml.rs
libs/adios-from-sigrok-swd/: Cargo.toml
libs/adios-from-sigrok-swd/src/: lib.rs
libs/regdoctor/: Cargo.toml  README.md
libs/regdoctor-adios-ext/: Cargo.toml
libs/regdoctor-adios-ext/src/: adi.svd  lib.rs
libs/regdoctor/examples/: tester.rs
libs/regdoctor/src/: lib.rs
scripts/: generate-analysis.fish  sniff-swd-when-cmd.fish
svds/: CortexM33.svd
tools/adios/: Cargo.toml
tools/adios/src/: adi.rs  cli.rs  cmsis_dap_usb_pdml.rs  main.rs  swd.rs
tools/adios/src/cmsis_dap_usb_pdml/: pdml.rs
tools/adios/src/cmsis_dap_usb_pdml/cmsis_dap/: from_pdml.rs
