[package]
name = "adios"
version = "0.1.0"
edition = "2021"

[dependencies]
adios-common = { path = "../../libs/adios-common" }
adios-from-cmsis-dap-ws-pdml = { path = "../../libs/adios-from-cmsis-dap-ws-pdml" }
adios-from-sigrok-swd = { path = "../../libs/adios-from-sigrok-swd" }
regdoctor = { path = "../../libs/regdoctor" }
nom.workspace = true
bilge.workspace = true
env_logger.workspace = true
log.workspace = true
quick-xml.workspace = true
serde.workspace = true
clap.workspace = true
clio.workspace = true
svd-parser.workspace = true
nom_locate.workspace = true
